<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quizapp">QUIZ APP</string>
    <string name="option_1">Option-1</string>
    <string name="option_2">Option-2</string>
    <string name="option_3">Option-3</string>
    <string name="option_4">Option-4</string>
    <string name="restart">RESTART</string>
    <string name="time_taken">Time Taken</string>
    <string name="score">Score</string>
    <string name="exit">EXIT</string>
    <string name="quiz_submitted">Quiz Submitted</string>
    <string name="timer">Timer</string>
    <string name="submit">Submit</string>
    <string name="question">Question</string>
    <string name="bookmark">Bookmark</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="time_left">Time Left</string>
    <string name="instruction">Total number of questions: 10\n\nType of questions: MCQ \n\nTotal Time: 3 minutes</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="rules">RULES</string>
</resources>