<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionDetailsFragment">


    <TextView
        android:id="@+id/timer2"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/submit_button2"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/timer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button2"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@color/whatsapp_green"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button2"
        tools:text="@string/question" />

    <Switch
        android:id="@+id/toggleButton"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/bookmark"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton">

        <RadioButton
            android:id="@+id/option_1"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            tools:text="@string/option_1" />

        <RadioButton
            android:id="@+id/option_2"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            tools:text="@string/option_2" />

        <RadioButton
            android:id="@+id/option_3"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            tools:text="@string/option_3" />

        <RadioButton
            android:id="@+id/option_4"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            tools:text="@string/option_4" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="112dp"
        android:background="@color/whatsapp_green"
        android:text="@string/previous"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:background="@color/whatsapp_green"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>